# libetude

./: .cppcheck  .gitignore  CMakeLists.txt  CMakeLists_simple.txt  CODE_QUALITY_ANALYSIS.md  FINAL_ANALYSIS_REPORT.md  IMPROVEMENT_PLAN.md  INSTALL.md  LICENSE  README.md  RELEASE_NOTES.md  TESTING.md  debug_memory.c  fix_tests.sh  run_all_tests.sh  run_tests.bat  run_tests.ps1  run_tests.sh  test_fast_math_simple.c  test_memory_allocator_simple.c  test_memory_fixed.c  test_memory_optimization_advanced.c  test_memory_optimization_simple.c  test_memory_simple.c  test_neon_simple.c
bindings/: CMakeLists.txt  README.md  mobile_optimization.c  mobile_optimization.h
bindings/cpp/: CMakeLists.txt  README.md  engine.cpp  libetude-cpp.pc.in
bindings/jni/: CMakeLists.txt
bindings/jni/include/: libetude_jni.h
bindings/jni/src/: audio_jni.cpp  engine_jni.cpp  libetude_jni.cpp  utils_jni.cpp
bindings/objc/: CMakeLists.txt  LibEtude-Bridging-Header.h  LibEtude.modulemap
bindings/objc/include/: LibEtudeAudioStream.h  LibEtudeEngine.h  LibEtudePerformanceStats.h  LibEtudeUtils.h
bindings/objc/src/: LibEtudeAudioStream.mm  LibEtudeEngine.mm  LibEtudePerformanceStats.mm  LibEtudeUtils.mm
bindings/objc/swift/: LibEtudeSwift.swift
docs/windows/templates/: CMakeLists.txt  LibEtudeApp.vcxproj  LibEtudeTemplate.vstemplate  README.md  main.cpp  vcpkg.json
examples/: CMakeLists.txt
examples/basic_tts/: CMakeLists.txt  README.md  main.c
examples/cpp_binding/: CMakeLists.txt  main.cpp
examples/data/: README.md
examples/desktop_optimization/: main.c
examples/embedded_optimization/: main.c
examples/platform_abstraction/: CMakeLists.txt  README.md  audio_example.c  cross_platform_demo.c  performance_benchmark.c  sample_data.txt  system_info_example.c
examples/plugin_dependency/: CMakeLists.txt  main.c
examples/plugin_extension/: CMakeLists.txt  README.md  main.c
examples/plugins/: main.c
examples/streaming/: CMakeLists.txt  README.md  main.c
examples/windows_development_tools/: CMakeLists.txt  README.md  main.c  windows_error_example.c
examples/world4utau/: CMakeLists.txt  Doxyfile  README.md  generate_docs.sh  main.c  run_audio_io_tests.sh
examples/world4utau/examples/: README.md  basic_usage.sh  openutau_integration.md  performance_test.sh  quality_comparison.py
examples/world4utau/include/: audio_file_io.h  dsp_block_diagram.h  dsp_block_factory.h  dsp_blocks.h  dsp_diagram_builder.h  utau_interface.h  world_debug_tools.h  world_dsp_blocks.h  world_engine.h  world_error.h  world_graph_builder.h  world_graph_context.h  world_graph_node.h  world_graph_optimizer.h  world_performance_monitor.h  world_pipeline.h  world_pipeline_config.h  world_profiler.h  world_streaming.h  world_visualization.h
examples/world4utau/src/: audio_file_io.c  dsp_block_diagram.c  dsp_block_factory.c  dsp_blocks.c  dsp_diagram_builder.c  utau_interface.c  world_debug_tools.c  world_dsp_blocks.c  world_engine.c  world_error.c  world_graph_builder.c  world_graph_context.c  world_graph_node.c  world_graph_optimizer.c  world_memory.c  world_performance_monitor.c  world_pipeline.c  world_pipeline_config.c  world_profiler.c  world_realtime_optimization.c  world_streaming.c  world_visualization.c
src/: CMakeLists.txt
src/audio/dsp/: mel_scale.c  stft.c
src/audio/effects/: audio_effects.c  compressor_plugin.c  delay_plugin.c  equalizer_plugin.c  reverb_plugin.c
src/audio/io/: audio_io.c
src/audio/vocoder/: vocoder.c
src/core/: api.c  engine.c  init.c
src/core/benchmark/: benchmark.c
src/core/graph/: graph.c  operators.c
src/core/hardware/: hardware_detect.c
src/core/kernels/: kernel_registry.c
src/core/math/: activation.c  fast_math.c
src/core/memory/: allocator.c  memory_leak_detector.c  memory_optimization.c  memory_pool.c
src/core/performance/: performance_analyzer.c
src/core/tensor/: quantization.c  tensor.c  tensor_ops.c
src/lef/compression/: compression.c  voice_compression.c
src/lef/extensions/: conditional_activation.c  extension_loader.c
src/lef/format/: lef_format.c  lefx_format.c
src/lef/loader/: model_loader.c
src/platform/: audio_common.c  common.c  desktop_optimization.c  dynlib_common.c  dynlib_error_mapping.c  embedded_optimization.c  factory.c  filesystem_common.c  memory_common.c  mobile_optimization.c  mobile_power_management.c  network_common.c  optimization.c  platform.c  platform_core.c  platform_utils.c  runtime_adaptation.c  system_common.c  thermal_management.c  threading_common.c
src/platform/linux/: factory_linux.c  (+5 more)
tests/: CMakeLists.txt  README.md  README_PLATFORM_TESTS.md  platform_test.c  simple_unity_test.c
tests/data/: README.md
tests/framework/: test_framework.c  test_framework.h
tests/integration/: test_hardware_validation.c  test_performance.c  test_performance_benchmarks.c  test_pipeline.c  test_platform.c  test_platform_integration.c  test_platform_integration.h  test_streaming.c  test_stress_tests.c  test_world4utau_integration.c
tests/performance/: benchmark_inference.c  benchmark_kernels.c
tests/unit/: test_aperiodicity_analysis.c  test_api.c  test_audio_effects.c  test_audio_io.c  test_benchmark.c  test_compression.c  test_conditional_activation.c  test_cpp_binding.cpp  test_debugging_tools.c  test_desktop_optimization.c  test_diff_model.c  test_dsp_blocks.c  test_embedded_optimization.c  test_engine.c  test_error_handling.c  test_f0_extraction.c  test_fast_math.c  test_fast_math_minimal.c  test_graph.c  test_graph_integration.c  test_hardware.c  test_kernel_registry.c  test_kernels.c  test_lef_format.c  test_lef_format_comprehensive.c  test_lefx_extension_comprehensive.c  test_lefx_format.c  test_lefx_loader.c  test_linux_audio.c  test_macos_audio.c  test_math_simple.c  test_mel_scale.c  test_memory.c  test_memory_allocator.c  test_memory_leak_detector.c  test_memory_management.c  test_memory_management_simple.c  test_memory_optimization.c  test_mobile_optimization.c  test_model_loader.c  (+34 more)
tools/benchmark/: CMakeLists.txt  benchmark_tool.c  benchmark_world4utau.c  performance_analyzer_tool.c
(+204 files in other folders)
